2009-12-29  Thomas M Hinkle  <tom@minime>

	* src/lib/plugins/import_export/web_import_plugin/generic_web_importer_plugin.py (GenericWebImporter.test_file):
	Add support for xhtml. Be fallback option whenever we match a file
	pattern.

	* src/lib/plugins/import_export/plaintext_plugin/plaintext_importer_plugin.py (PlainTextImporterPlugin.test_file):
	Don't match *all* files as fallback options -- have a list of
	"antipatterns" to exclude.

2009-12-18  Thomas M. Hinkle  <tom@grenville>

	* src/lib/gtk_extras/dialog_extras.py (SimpleFaqDialog.NESTED_MATCHER):
	Fix bug in REGEXP in number-header parsing.

	* src/lib/plugins/nutritional_information/databaseGrabber.py (DatabaseGrabber.parse_abbrevfile):
	Remove old code.

	* FAQ: Update FAQ (which was pretty seriously out-of-date).

2009-12-17  Thomas M. Hinkle  <tom@grenville>

	* src/lib/backends/db.py (RecData.validate_recdic): Ensure recipe
	info is unicode.

	* src/lib/check_encodings.py: Be less verbose.

	* Version -> 0.15.3
	
	* src/lib/plugins/nutritional_information/parser_data.py (NUTRITION_FIELDS): Update fields for SR21.

	* src/lib/plugins/nutritional_information/nutritionGrabberGui.py (check_for_db):
	Update DBs from SR20 (check if there are choline entries to see if
	the DB is old).

	* src/lib/plugins/nutritional_information/databaseGrabber.py (DatabaseGrabber.parse_abbrevfile):
	Update fields when adding doesn't work.

	* src/lib/plugins/nutritional_information/data_plugin.py (NutritionDataPlugin.update_version): Add new field (choline)

	* src/lib/backends/db.py (RecData.update_version_info): Fix update
	from versions < 0.11.x
	
	* i18n/gourmet.pot: Update.

	* i18n/POTFILES.in: Update to reflect current MANIFEST

	* src/lib/plugins/nutritional_information/parser_data.py (NUTRITION_FIELDS):
	Reorder fields and add choline for SR21 (they changed more than I
	had first thought!)

2009-12-14  Thomas M. Hinkle  <tom@grenville>

	* src/lib/backends/db.py (RecData.update_version_info): Fix update